docker/generic/k8s/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: music-planning
  labels:
    name: music-planning
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: music-planning
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: <PRIVATE_REGISTRY_URL>/generic-vuejs:latest
          ports:
            - name: http
              containerPort: 80
      imagePullSecrets:
        - name: regcred
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: music-planning
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
