docker/generic/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  namespace: music-planning
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - plan.lamusiquedelagarde.be
    secretName: frontend
  rules:
  - host: plan.lamusiquedelagarde.be
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
        path: /
